# domino

./: .env-dev  .env-dev.template  .gitignore  CHANGELOG.md  Dockerfile-airflow-domino.dev  Dockerfile-airflow-domino.prod  Dockerfile-domino-piece.dev  Dockerfile-domino-piece.gpu-dev  Dockerfile-domino-piece.gpu-prod  Dockerfile-domino-piece.prod  Dockerfile-domino-piece.tensorflow-gpu-dev  Dockerfile-domino-piece.tensorflow-gpu-prod  README.md  artifacthub-repo.yml  docker-compose-dev.yaml  domino-0.2.0.tgz  domino-iisas-0.2.0.tgz  index.yaml  passwords.json  pyproject.toml
.github/workflows/: integration-tests-api.yml  release-airflow-images-dev.yaml  release-airflow-images.yaml  release-domino-py.yaml  release-frontend-dev.yaml  release-frontend.yaml  release-rest-dev.yaml  release-rest.yaml
frontend/: .env.production  Dockerfile.dev  Dockerfile.prod  Dockerfile.prod.copy  README.md  build.sh  entrypoint.sh  index.html  nginx.conf  nginx.conf.domino  nginx.conf.template  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-debug.sh  tsconfig.json  vite.config.ts
frontend/scripts/: inject-env.mjs
frontend/src/: index.css  index.tsx
frontend/src/@types/: react-pdf.d.ts  runtime-env.d.ts
frontend/src/config/: environment.config.ts
frontend/src/providers/: app.tsx
frontend/src/routes/: index.tsx  protected.tsx  public.tsx
frontend/src/utils/: assetUtils.ts  basenameUtils.ts  generateTaskName.ts  gitProviders.ts  index.ts
helm/domino/: Chart.yaml  values.yaml
helm/domino/templates/: domino-frontend-deployment.yml  domino-rest-deployment.yml  secrets.yaml
rest/: Dockerfile  README.md  main.py  requirements-test.txt  requirements.txt
rest/auth/: base_authorizer.py  permission_authorizer.py
rest/clients/: airflow_client.py  awpl_rest_client.py  chat_rest_client.py  git_client_factory.py  github_rest_client.py  gitlab_rest_client.py
rest/core/: settings.py
rest/database/models/: enums.py  workflow.py  workspace.py
rest/repository/: piece_repository.py  workspace_repository.py
rest/routers/: chat_router.py  piece_repository_router.py  workflow_router.py
rest/schemas/context/: auth_context.py
rest/schemas/requests/: chat.py  (+3 more)
rest/services/: auth_service.py  piece_repository_service.py  piece_service.py  secret_service.py  user_service.py  workflow_service.py  workspace_service.py
rest/tests/: conftest.py
rest/utils/: parsers.py  workflow_template.py
src/domino/: base_piece.py  task.py
(+103 files in other folders)
